# pilar

./: README.md  pyproject.toml
.github/workflows/: checks.yml  deploy.yml
src/pilar/: main.py  utils.py
src/pilar/models/: SortModel.py  VowelCountModel.py
src/pilar/routers/: root.py  sort.py  vowel_count.py
tests/: test_sort_words.py  test_vowel_count.py
