[tool.poetry]
name = "pilar"
version = "0.1.0"
description = ""
authors = ["Luis Malta <luiso.malta@gmail.com>"]
readme = "README.md"
packages = [{include = "pilar", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
pydantic = "^2.7.4"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
